# Cortex_M4_Compiler

./: CMakeLists.txt  CMakePresets.json  DOCS.md  README.md  TODO.txt  bld.bat  compile.bat  compiler.c  compiler.h  m4UDL.xml  main.c  remake.bat
docs/: DOCS.md  TODO.txt
src/: bootloader.c  bootloader.h  compiler.c  compiler.h  main.c
tests/: arithmeticTest.m4  conditionalTest.m4  factorial.m4  fib.m4  registerManagementTest.m4  reorderingTest.m4  volatileTest.m4
